# project

./: example.py  hw9_1.py  hw_9.py  log.txt  main.py  pyproject.toml  requirements.txt
src/: hw9_1.py  widget.py
